0.4:
    - added a patcher util class to allow injecting events to existing libraries/code.

0.3:
    - Added a manifest.in file, so that CHANGES.txt will come along.

0.2:
    - Added multiprocess support.
    - Extended EventLogger to allow regex based filtering of events it logs.
    - Added JSONFileReporter to output reports in JSON format
    - Added a utility to faciliate writing Munin plugins

0.1:
    - Initial Release